--- a/CSS/main.css
+++ b/CSS/main.css
@@ -11,7 +11,9 @@ img {
 }
 
 .close {
-
+    float: right;
+    margin: 2em;
+    width: 2.5em;
 }
 
 a {
@@ -23,7 +25,7 @@ a {
     position: absolute;
     top: 0;
     left: 0;
-    background: url(/images/shoe1.jpg);
+    background: url(/images/shoe2.jpg);
     background-size: cover;
     background-position-x:20%;
     background-position-y:20%;
@@ -40,7 +42,34 @@ a {
 }
 
 nav {
-    display: none;
+    position: fixed;   /* it means that when i scroll down or up, it does not change it remains fixed*/
+    right: 0;
+    top: 0;
+    background: white;
+    height: 100vh;
+    width: 50%;
+    z-index: 120;    /*this is to make sure that it is sitting on top of the other elements */
+    text-transform: uppercase;
+    transform: translateX(100%);
+    transition: transform .7s ease-in-out; /*a way to specify what type of property should animate from one point to another */
+
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin-top: 8em;
+}
+
+nav ul a {
+    color: black;
+    padding: .75em 2em;    
+    display: block;        /* padding on a link element will not work until it is display block */
+    width: 100%;
+}
+
+nav ul a:hover {
+    background: rgb(214, 214, 214);  /* this adds the code for the hover effect */
 }
 
 header {
@@ -51,10 +80,53 @@ header {
 header svg {
     display: flex;
     justify-content:space-between;
-    width: 3rem;
+    width: 3em;
     margin-top: -.6em;
     cursor: pointer;
 }
+
+h1 {
+    font-size: 3rem;
+}
+
+.subhead {
+    font-size: 1.4rem;
+}
+
+section.hero {
+    color: white;
+    height: 90vh;
+
+}
+
+section.hero .down-arrow {
+    stroke: white ;
+    position: absolute;
+    bottom: 2em;
+    width: 1em;
+}
+
+section.hero .down-arrow path {
+    fill: white;
+}
+
+
+.more-info img {
+    width: 100%;
+    object-fit: cover;  /*if we remove this property it kinda distorts the images*/
+    height: 15em;
+}
+
+
+.more-info .title {
+    font-weight: bold;
+    font-size: 1.25em;
+}
+
+.more-info .description {
+    line-height: 1.5em;
+}
+
 
 
 
