--- a/CSS/main.css
+++ b/CSS/main.css
@@ -25,7 +25,7 @@ a {
     position: absolute;
     top: 0;
     left: 0;
-    background: url(/images/shoe2.jpg);
+    background: url(/images/shoe1.jpg);
     background-size: cover;
     background-position-x:20%;
     background-position-y:20%;
@@ -128,10 +128,112 @@ section.hero .down-arrow path {
 }
 
 
+@media only screen and (min-width: 680px) {
+
+    body {
+        margin: 1.5em 5em;
+        font-family: 'Kameron', serif; 
+    }
 
 
+}
 
 
+@media only screen and (min-width: 920px) {
+
+    .menu {
+        display: none;
+    }
+
+    nav {
+        transform: translateX(0);
+        position: unset;
+        display: block;
+        width: auto;
+        height: auto;
+        background: none;
+    }
+
+    nav .close {
+        display: none;
+    }
+
+    nav ul {
+        top: 1em;
+        display: flex;    /* display flex makes the elements to be displayed in colomns */
+        margin: 0;
+    }
+
+    nav ul li a {
+        color: white;
+        padding: .5em 1.5em;
+        font-size: .9rem;
+    }
+
+    nav ul li a:hover {
+        text-decoration: underline;
+        background: none;
+    }
+
+    .hero-img {
+        left: unset;
+        right: 0;
+        width: 50%;
+        height: 42em;
+    }
+
+    .logo {
+        color: black;
+    }
+
+    .logo span {
+        color: red
+    }
+
+    section.hero {
+        color: black;
+        height: auto;
+        width: 40%;
+        margin-bottom: 9em;
+    }
+
+    section.hero .down-arrow {
+        stroke: black;
+        position: unset;
+        margin-top: 12em;
+    }
+
+    section.hero .down-arrow path {
+        fill: black;
+    }
+    
+    .feature {
+        display: grid;
+        grid-template-columns: repeat(2, auto);
+        gap: 3em;
+        margin-bottom: 8em;
+    }
+
+    .feature img {
+        width: 25em;
+    }
+
+    .feature .content {
+        text-align: right;
+        width: 25em;
+    }
+
+    .feature.left {
+        grid-template-areas: "left right";
+    }
+
+    .feature.left img {
+        grid-area: left
+    }
+    .feature.left .content {
+        text-align: left;
+    }
+}
 
 
 
